--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,10 @@ a {
   color: #555;
   text-decoration: none;
 }
+.twitter-button> a:hover {
+  color: #555;
+  text-decoration: none;
+}
 .github-button {
   font-size: 10px;
 }
@@ -71,3 +75,11 @@ a {
 .medium-button {
   font-size: 10px;
 }
+.twitter-button> a {
+  color: #1DACEE;
+}
+.twitter-button {
+  font-size: 10px;
+}
+
+
