--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ body {
 .section {
   padding-top: 4rem;
 }
+.projects {
+  padding-bottom: 4rem;  
+}
+
 .social-buttons {
   padding-left: 10px;
 }
